--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
 <script src="https://unpkg.com/@wcjiang/notify/dist/notify.min.js"></script>
 <script type="text/javascript">
  setTimeout(() => {
-       var notify = new Notify({
-        effect: 'flash',
-        interval: 500,
-      });
-        notify({
+        Notify({
           title: 'Welcome to iNotify!',
           body: 'You are opening the iNotify website!',
         });
